Tools/Convert_GL.h_and_GLext.h_C-Include/oglGLext.h

typedef char GLchar;
 void  glProgramUniform3f (GLuint program_, GLint location, GLfloat v0, GLfloat v1, GLfloat v2);
 void  glProgramUniform3fv (GLuint program_, GLint location, GLsizei count,GLfloat *value);
 void  glProgramUniform3d (GLuint program_, GLint location, GLdouble v0, GLdouble v1, GLdouble v2);
 void  glProgramUniform3dv (GLuint program_, GLint location, GLsizei count,GLdouble *value);
 void  glProgramUniform3ui (GLuint program_, GLint location, GLuint v0, GLuint v1, GLuint v2);
 void  glProgramUniform3uiv (GLuint program_, GLint location, GLsizei count,GLuint *value);
 void  glProgramUniform4i (GLuint program_, GLint location, GLint v0, GLint v1, GLint v2, GLint v3);
 void  glProgramUniform4iv (GLuint program_, GLint location, GLsizei count,GLint *value);
 void  glProgramUniform4f (GLuint program_, GLint location, GLfloat v0, GLfloat v1, GLfloat v2, GLfloat v3);
 void  glProgramUniform4fv (GLuint program_, GLint location, GLsizei count,GLfloat *value);
 void  glProgramUniform4d (GLuint program_, GLint location, GLdouble v0, GLdouble v1, GLdouble v2, GLdouble v3);
 void  glProgramUniform4dv (GLuint program_, GLint location, GLsizei count,GLdouble *value);
 void  glProgramUniform4ui (GLuint program_, GLint location, GLuint v0, GLuint v1, GLuint v2, GLuint v3);
 void  glProgramUniform4uiv (GLuint program_, GLint location, GLsizei count,GLuint *value);
 void  glProgramUniformMatrix2fv (GLuint program_, GLint location, GLsizei count, GLboolean transpose,GLfloat *value);
 void  glProgramUniformMatrix3fv (GLuint program_, GLint location, GLsizei count, GLboolean transpose,GLfloat *value);
 void  glProgramUniformMatrix4fv (GLuint program_, GLint location, GLsizei count, GLboolean transpose,GLfloat *value);
 void  glProgramUniformMatrix2dv (GLuint program_, GLint location, GLsizei count, GLboolean transpose,GLdouble *value);
 void  glProgramUniformMatrix3dv (GLuint program_, GLint location, GLsizei count, GLboolean transpose,GLdouble *value);
 void  glProgramUniformMatrix4dv (GLuint program_, GLint location, GLsizei count, GLboolean transpose,GLdouble *value);
 void  glProgramUniformMatrix2x3fv (GLuint program_, GLint location, GLsizei count, GLboolean transpose,GLfloat *value);
 void  glProgramUniformMatrix3x2fv (GLuint program_, GLint location, GLsizei count, GLboolean transpose,GLfloat *value);
 void  glProgramUniformMatrix2x4fv (GLuint program_, GLint location, GLsizei count, GLboolean transpose,GLfloat *value);
 void  glProgramUniformMatrix4x2fv (GLuint program_, GLint location, GLsizei count, GLboolean transpose,GLfloat *value);
 void  glProgramUniformMatrix3x4fv (GLuint program_, GLint location, GLsizei count, GLboolean transpose,GLfloat *value);
 void  glProgramUniformMatrix4x3fv (GLuint program_, GLint location, GLsizei count, GLboolean transpose,GLfloat *value);
 void  glProgramUniformMatrix2x3dv (GLuint program_, GLint location, GLsizei count, GLboolean transpose,GLdouble *value);
 void  glProgramUniformMatrix3x2dv (GLuint program_, GLint location, GLsizei count, GLboolean transpose,GLdouble *value);
 void  glProgramUniformMatrix2x4dv (GLuint program_, GLint location, GLsizei count, GLboolean transpose,GLdouble *value);
 void  glProgramUniformMatrix4x2dv (GLuint program_, GLint location, GLsizei count, GLboolean transpose,GLdouble *value);
 void  glProgramUniformMatrix3x4dv (GLuint program_, GLint location, GLsizei count, GLboolean transpose,GLdouble *value);
 void  glProgramUniformMatrix4x3dv (GLuint program_, GLint location, GLsizei count, GLboolean transpose,GLdouble *value);
 void  glValidateProgramPipeline (GLuint pipeline);
 void  glGetProgramPipelineInfoLog (GLuint pipeline, GLsizei bufSize, GLsizei *length, GLchar *infoLog);
 void  glVertexAttribL1d (GLuint index, GLdouble x);
 void  glVertexAttribL2d (GLuint index, GLdouble x, GLdouble y);
 void  glVertexAttribL3d (GLuint index, GLdouble x, GLdouble y, GLdouble z);
 void  glVertexAttribL4d (GLuint index, GLdouble x, GLdouble y, GLdouble z, GLdouble w);
 void  glVertexAttribL1dv (GLuint index,GLdouble *v);
 void  glVertexAttribL2dv (GLuint index,GLdouble *v);
 void  glVertexAttribL3dv (GLuint index,GLdouble *v);
 void  glVertexAttribL4dv (GLuint index,GLdouble *v);
 void  glVertexAttribLPointer (GLuint index, GLint size, GLenum type, GLsizei stride,void *pointer);
 void  glGetVertexAttribLdv (GLuint index, GLenum pname, GLdouble *params);
 void  glViewportArrayv (GLuint first, GLsizei count,GLfloat *v);
 void  glViewportIndexedf (GLuint index, GLfloat x, GLfloat y, GLfloat w, GLfloat h);
 void  glViewportIndexedfv (GLuint index,GLfloat *v);
 void  glScissorArrayv (GLuint first, GLsizei count,GLint *v);
 void  glScissorIndexed (GLuint index, GLint left, GLint bottom, GLsizei width, GLsizei height);
 void  glScissorIndexedv (GLuint index,GLint *v);
 void  glDepthRangeArrayv (GLuint first, GLsizei count,GLdouble *v);
 void  glDepthRangeIndexed (GLuint index, GLdouble n, GLdouble f);
 void  glGetFloati_v (GLenum target, GLuint index, GLfloat *data);
 void  glGetDoublei_v (GLenum target, GLuint index, GLdouble *data);
 void  glDrawArraysInstancedBaseInstance (GLenum mode, GLint first, GLsizei count, GLsizei instancecount, GLuint baseinstance);
 void  glDrawElementsInstancedBaseInstance (GLenum mode, GLsizei count, GLenum type,void *indices, GLsizei instancecount, GLuint baseinstance);
 void  glDrawElementsInstancedBaseVertexBaseInstance (GLenum mode, GLsizei count, GLenum type,void *indices, GLsizei instancecount, GLint basevertex, GLuint baseinstance);
 void  glGetInternalformativ (GLenum target, GLenum internalformat, GLenum pname, GLsizei count, GLint *params);
 void  glGetActiveAtomicCounterBufferiv (GLuint program_, GLuint bufferIndex, GLenum pname, GLint *params);
 void  glBindImageTexture (GLuint unit_, GLuint texture, GLint level, GLboolean layered, GLint layer, GLenum access, GLenum format);
 void  glMemoryBarrier (GLbitfield barriers);
 void  glTexStorage1D (GLenum target, GLsizei levels, GLenum internalformat, GLsizei width);
 void  glTexStorage2D (GLenum target, GLsizei levels, GLenum internalformat, GLsizei width, GLsizei height);
 void  glTexStorage3D (GLenum target, GLsizei levels, GLenum internalformat, GLsizei width, GLsizei height, GLsizei depth);
 void  glDrawTransformFeedbackInstanced (GLenum mode, GLuint id, GLsizei instancecount);